--- a/README
+++ b/README
@@ -4,6 +4,8 @@ A simple Facebook App that allows the user to enter a bunch of friends and
 filters photos in which the user is tagged with them. The idea was conceived during a
 mini-hackathon at Facebook's Hyderabad office.
 
+The app is available at https://apps.facebook.com/photo-filter
+
 Written using Facebook's PHP SDK v3.0.0 and JQuery 1.7.1. 
 Thanks to James Smith for 'loopj TokenInput', a Facebook-style autocomplete 
 plugin (http://loopj.com/jquery-tokeninput/)
