--- a/README
+++ b/README
@@ -8,4 +8,4 @@ The app is available at https://apps.facebook.com/photo-filter
 
 Written using Facebook's PHP SDK v3.0.0 and JQuery 1.7.1. 
 Thanks to James Smith for 'loopj TokenInput', a Facebook-style autocomplete 
-plugin (http://loopj.com/jquery-tokeninput/)
+plugin (http://loopj.com/jquery-tokeninput/).
