--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Author: Viswanath Sivakumar, aka viswnathgs <viswanathgs@gmail.com>
+Author: Viswanath Sivakumar, aka viswanathgs <viswanathgs@gmail.com>
 
 A simple Facebook App that allows the user to enter a bunch of friends and 
 filters photos in which the user is tagged with them. The idea was conceived during a
